publish changed download link

--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
                         <h2>Downloadables</h2>
                         <div class="download-item">
                             <p>National Action Plan (PNAP) on Antimicrobial Resistance (AMR) 2019-2023</p>
-                            <a href="assets/philippine-national-action-plan-on-amr-2019-2023-final.pdf" class="download-link" download>
-                                <i class="fas fa-file-pdf"></i> Download PDF
+                            <a href="https://cdn.who.int/media/docs/default-source/antimicrobial-resistance/amr-spc-npm/nap-library/philippine-national-action-plan-on-amr-2019-2023-final.pdf?sfvrsn=8bbe1fdb_1&download=true" class="download-link" download>
+                                <i class="fas fa-file-pdf"></i> Download Link
                             </a>
                         </div>
 
