--- a/index.html
+++ b/index.html
@@ -36,6 +36,10 @@
         .navbar-nav .nav-link:hover::after {
             width: 100%;
         }
+
+        .team-bio {
+            text-align: justify;
+        }
     </style>
 </head>
 <body>
@@ -145,7 +149,9 @@
                         </div>
                         <h5>Elsen R. Idulsa</h5>
                         <p class="text-muted">Principal Researcher</p>
-                        <p class="team-bio"text-align: justify;>Elsen is a third-year Bachelor of Science in Pharmacy student at the University of Makati. As the principal researcher of the study “Beyond Awareness: An Action Research to Engage the University of Makati in Embodying AMS Culture,” she leads efforts in promoting antimicrobial stewardship (AMS) across the campus community. With a strong background in student leadership and a passion for clinical pharmacy, Elsen is committed to clearing up common misconceptions about antimicrobials, especially the belief that over-the-counter medicines are antibiotics. She currently serves as the Community Extension Coordinator of the UMak Institute of Pharmacy - Student Council and continues to advocate for accessible, practical AMS education.</p><br>
+                        <p class="team-bio">
+                            Elsen is a third-year Bachelor of Science in Pharmacy student at the University of Makati. As the principal researcher of the study "Beyond Awareness: An Action Research to Engage the University of Makati in Embodying AMS Culture," she leads efforts in promoting antimicrobial stewardship (AMS) across the campus community. With a strong background in student leadership and a passion for clinical pharmacy, Elsen is committed to clearing up common misconceptions about antimicrobials, especially the belief that over-the-counter medicines are antibiotics. She currently serves as the Community Extension Coordinator of the UMak Institute of Pharmacy - Student Council and continues to advocate for accessible, practical AMS education.
+                        </p>
                         <p><a href="mailto:eidulsa.a12137468@umak.edu.ph">eidulsa.a12137468@umak.edu.ph</a></p>
                         <div class="contact-links">
                             <a href="https://www.facebook.com/elsenri/" target="_blank" class="social-icon"><i class="fab fa-facebook"></i></a>
@@ -154,13 +160,15 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="team-member text-center" text-align: justify;>
+                    <div class="team-member text-center">
                         <div class="member-img mb-3">
                             <img src="https://static.wixstatic.com/media/86a116_e0f2939eebb545d3b723c9c83bd3d833~mv2.jpg/v1/crop/x_123,y_419,w_2454,h_2034/fill/w_403,h_334,al_c,q_80,usm_0.66_1.00_0.01,enc_avif,quality_auto/IMG_1656_JPG.jpg" alt="Bernadette D. Anobling" class="rounded-circle">
                         </div>
                         <h5>Bernadette D. Anobling</h5>
                         <p class="text-muted">Co-Researcher</p>
-                        <p class="team-bio"text-align: justify;>With a strong foundation in pharmacy practice, Bernadette is a third-year Bachelor of Science in Pharmacy student at the University of Makati. She serves as a co-researcher for "Beyond Awareness: An Action Research to Engage the University of Makati in Embodying AMS Culture," where she focuses on promoting the responsible use of antimicrobials. Her experience as a Pharmacy Assistant has exposed her to the urgent challenges posed by antimicrobial resistance (AMR), deepening her commitment to antimicrobial stewardship (AMS) advocacy. Bernadette is dedicated to empowering students and community members to make informed decisions about medication use through education and awareness initiatives.</p>
+                        <p class="team-bio">
+                            With a strong foundation in pharmacy practice, Bernadette is a third-year Bachelor of Science in Pharmacy student at the University of Makati. She serves as a co-researcher for "Beyond Awareness: An Action Research to Engage the University of Makati in Embodying AMS Culture," where she focuses on promoting the responsible use of antimicrobials. Her experience as a Pharmacy Assistant has exposed her to the urgent challenges posed by antimicrobial resistance (AMR), deepening her commitment to antimicrobial stewardship (AMS) advocacy. Bernadette is dedicated to empowering students and community members to make informed decisions about medication use through education and awareness initiatives.
+                        </p>
                         <p><a href="mailto:banobling.k11938314@umak.edu.ph">banobling.k11938314@umak.edu.ph</a></p>
                         <div class="contact-links">
                             <a href="https://www.facebook.com/bernadette.anobling.2024" target="_blank" class="social-icon"><i class="fab fa-facebook"></i></a>
@@ -175,7 +183,9 @@
                         </div>
                         <h5>Keint Erm P. Urbiztondo</h5>
                         <p class="text-muted">Co-Researcher</p>
-                        <p class="team-bio" text-align: justify;>Keint Erm devotes his student research to combat antimicrobial resistance (AMR) which stands as an urgent health emergency of our time. He currently pursues his Bachelor of Science in Pharmacy degree at University of Makati while participating in campus initiatives that educate about antibiotic responsibility and promote health awareness. Keint Erm promotes the preservation of lifesaving medications through educational programs and collaborative action and scientific evidence that allows future generations to maintain their effectiveness.</p><br><br><br><br>
+                        <p class="team-bio">
+                            Keint Erm devotes his student research to combat antimicrobial resistance (AMR) which stands as an urgent health emergency of our time. He currently pursues his Bachelor of Science in Pharmacy degree at University of Makati while participating in campus initiatives that educate about antibiotic responsibility and promote health awareness. Keint Erm promotes the preservation of lifesaving medications through educational programs and collaborative action and scientific evidence that allows future generations to maintain their effectiveness.
+                        </p><br><br><br><br>
                         <p><a href="mailto:kurbiztondo.k12043118@umak.edu.ph">kurbiztondo.k12043118@umak.edu.ph</a></p>
                         <div class="contact-links">
                             <a href="https://www.facebook.com/keint.urbiztondo" target="_blank" class="social-icon"><i class="fab fa-facebook"></i></a>
@@ -259,7 +269,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="learn-more-image">
-                        <img src="https://imgs.search.brave.com/0UaOkcDCKH7xEyWImM4_t1K9F0mmcLAQeVwQTJlRzkk/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly90NC5m/dGNkbi5uZXQvanBn/LzA0LzEwLzI3LzQ1/LzM2MF9GXzQxMDI3/NDU1NV9IbWV1N0pa/OE0zME1WTk12S0M5/b0p1NlByUnJjeHlu/NS5qcGc" style="width: 546px; height: 480px; object-fit: cover; pointer-events: none; user-select: none;">
+                        <img src="https://imgs.search.brave.com/vDDoBCNlx9HhMZzF0NlhZ7Bjim0X2Mn_IqXm81Uro3Y/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pbWcu/ZnJlZXBpay5jb20v/cHJlbWl1bS1waG90/by9tZWRpY2FsLXN0/dWRlbnRzLXNpdHRp/bmctdGFsa2luZ18x/MzMzOS03NjgxMS5q/cGc_c2VtdD1haXNf/aHlicmlk" style="width: 546px; height: 480px; object-fit: cover; pointer-events: none; user-select: none;">
                     </div>
                 </div>
             </div>
@@ -280,7 +290,7 @@
                     <div class="footer-right text-end">
                         <p class="footer-address">University of Makati, JP Rizal Extension,<br>West Rembo, 1644 City of Taguig,<br>Metro Manila, Philippines</p>
                         <div class="footer-social">
-                            <a href="#" class="social-icon"><i class="fab fa-facebook"></i></a>
+                            <a href="https://www.facebook.com/UMakPH" class="social-icon"><i class="fab fa-facebook"></i></a>
                             <a href="#" class="social-icon"><i class="fab fa-linkedin"></i></a>
                         </div>
                     </div>
