--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 </div>
                 <div class="col-lg-6">
                     <div class="learn-more-image">
-                        <img src="https://imgs.search.brave.com/ZMuRE_7Ta2zKtAQ07mHpIycP2kt9kMhoyIdybC3w3G8/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly90NC5m/dGNkbi5uZXQvanBn/LzAxLzExLzk1LzQ1/LzM2MF9GXzExMTk1/NDU0OV9Makd0Q1Ru/STQxaGZadENjaVlz/NHBFaGxqNHIwM3Aw/RS5qcGc" style="width: 546px; height: 480px; object-fit: cover; pointer-events: none; user-select: none;">
+                        <img src="https://data.who.int/ResourcePackages/DDIBootstrap5/assets/src/images/locator-maps/608.svg?package=DDIBootstrap5" style="width: 546px; height: 480px; object-fit: cover; pointer-events: none; user-select: none;">
                     </div>
                 </div>
             </div>
