--- a/index.html
+++ b/index.html
@@ -265,8 +265,10 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
+                    <div class="col-lg-6">
                     <div class="learn-more-image">
-                        <img src="https://cdn.who.int/media/images/default-source/who_homepage/nurse-with-covid-vaccine-vial.tmb-xl.jpg?sfvrsn=f3c5d966_13" style="width: 546px; height: 480px; object-fit: cover; pointer-events: none; user-select: none;">
+                        <img src="https://data.who.int/ResourcePackages/DDIBootstrap5/assets/src/images/locator-maps/608.svg?package=DDIBootstrap5"
+                             style="width: 85%; max-width: 400px; height: auto; object-fit: contain; pointer-events: none; user-select: none;">
                     </div>
                 </div>
             </div>
