Update learn more image

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                     <div class="col-lg-6">
                     <div class="learn-more-image">
                         <img src="https://data.who.int/ResourcePackages/DDIBootstrap5/assets/src/images/locator-maps/608.svg?package=DDIBootstrap5"
-                             style="height: 100%; width: 85%; max-width: 400px; height: auto; object-fit: contain; pointer-events: none; user-select: none;">
+                             style="width: 100%; max-width: 400px; height: auto; object-fit: contain; pointer-events: none; user-select: none;">
                     </div>
                 </div>
             </div>
