--- a/index.html
+++ b/index.html
@@ -66,6 +66,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="learn.html">Learn More</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -265,10 +268,9 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <div class="col-lg-6">
                     <div class="learn-more-image">
                         <img src="https://data.who.int/ResourcePackages/DDIBootstrap5/assets/src/images/locator-maps/608.svg?package=DDIBootstrap5"
-                              style="width: 120%; height: 150%; object-fit: contain; pointer-events: none; user-select: none;">
+                             style="width: 75%; height: 85%; object-fit: contain; pointer-events: none; user-select: none;">
                     </div>
                 </div>
             </div>
